fix: Button overlap

--- a/src/windows/Translator/components/TopBar/style.css
+++ b/src/windows/Translator/components/TopBar/style.css
@@ -5,8 +5,7 @@
 }
 
 .topbar-macos {
-    display: flex;
-    justify-content: right;
+    text-align: right;
     height: 35px;
 }
 
